fixed overflow from lots of servers on the list and fixed margin on edit server form

--- a/react-app/src/components/HomePage/Channel/CreateChannel.css
+++ b/react-app/src/components/HomePage/Channel/CreateChannel.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   color: white;
   border-radius: 8px;
-  height: 2.5rem;
+  height: 5%;
   border: none;
   background-image: radial-gradient(
     circle 732px at 96.2% 89.9%,
@@ -14,6 +14,8 @@
   );
   width: 100px;
   margin-top: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .createChanneForm {
