--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -4,7 +4,7 @@
   display: flex;
   flex: 1 1 auto;
   margin: 0px;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 body {
@@ -76,8 +76,14 @@ body {
   text-align: center;
 }
 
+.updateTitle {
+  margin-top: -1%;
+  padding-top: 0px;
+}
+
 .updateServerForm {
   background-color: #2b2d32;
+  margin-top: 0px;
 }
 
 .serverChannels {
@@ -93,6 +99,10 @@ body {
   overflow-y: scroll;
 }
 .serverChannels::-webkit-scrollbar {
+  display: none;
+}
+
+.publicServersDisplay::-webkit-scrollbar {
   display: none;
 }
 
@@ -134,7 +144,6 @@ body {
   align-items: center;
   background-color: #2b2d32;
   margin-left: 4rem;
-  /* overflow-x: scroll; */
 }
 
 .singleChannelDisplay {
@@ -226,7 +235,6 @@ body {
 
 .addaserverbutt {
   background-color: whitesmoke;
-
   border: solid 1px;
   border-radius: 35px;
   font-family: "Courier New", Courier, monospace;
@@ -235,7 +243,6 @@ body {
   text-decoration: none;
   justify-content: center;
   align-items: center;
-
   width: 35px;
   height: 35px;
   font-weight: bold;
